--- a/index.html
+++ b/index.html
@@ -305,9 +305,14 @@
       <div class="col-12 ">
           <div class="mb-3 ">
            
-           <div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/id_ID/sdk.js#xfbml=1&version=v21.0"></script>
-            <div class="fb-comments" data-href="https://ridashanum22.github.io/Imron-Iik05/" data-width="" data-numposts="5"></div>
+           <div class="row justify-content-center mt-5">
+              <div class="col-md-6">
+                <div id="disqus_thread"></div>
+                <div id="fb-root"></div>
+                <script async defer crossorigin="anonymous" src="https://connect.facebook.net/id_ID/sdk.js#xfbml=1&version=v21.0"></script>
+                <div class="fb-comments" data-href="https://ridashanum22.github.io/Imron-Iik05/" data-width="" data-numposts="5"></div>
+              </div>
+            </div> 
 
           </div>
         </div>
